--- a/templates/index.html
+++ b/templates/index.html
@@ -10,28 +10,39 @@
       <div class="col-lg-6 col-lg-offset-3">
         <h4>HELLO  WORLD !!! </h4>
         <h1>I'AM CPE</h1>
-        <h4>กิจกรรม ปกส้ม CPE</h4>
+        <h4>กิจกรรม ปกส้ม CPE</h4> <br>
+        <h4> UPDATE ระบบใหม่ </h4>
+        <h4> 1.เพิ่มปุ่มลบจากน้องที่สุ่มมา</h4>
+        <h4> 2.เพิ่มระบบเซ็นทั้งหมด จากน้องที่ขอมา</h4>
+        <h4> 3.ปุ่มหัวใจ และปุ่มเซ็น ไม่เด้งกลับหน้าแรก</h4>
+        <h4> 4.TOP RANK โชว์ ถึง 4 คน เพราะปีสูงบอกน้องบูมครองคนเดียว</h4>
       </div>
     </div>
   </div>
   </div>
+
   <section id="works"></section>
   <div class="container">
+
     <h2 align="center">ขวัญใจเพื่อน   (Most Like) </h2>
     <div class="text-center">
-  <img src="{{5|findrank}}" class="rounded" alt="..." width="300" height="300">
+  <img src="{{top1}}" class="rounded" alt="..." width="300" height="300">
+  <h2> TOP 1</h2>
    </div>
     <div class="row centered mt mb">
 
 
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href=""><img src="{{pic.pic1.url}}" class="img-responsive"></a>
+        <a href=""><img src="{{top2}}" class="img-responsive"></a>
+        <p>Top2</p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href=""><img src="{{pic.pic2.url}}" class="img-responsive"></a>
+        <a href=""><img src="{{top3}}" class="img-responsive"></a>
+        <p>Top3</p>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <a href=""><img src="{{pic.pic3.url}}" class="img-responsive"></a>
+        <a href=""><img src="{{top4}}" class="img-responsive"></a>
+        <p>Top4</p>
       </div>
     </div>
   </div>
