--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,8 @@
         <h1>I'AM CPE</h1>
         <h4>กิจกรรม ปกส้ม CPE</h4> <br>
         <h4> UPDATE ระบบใหม่ </h4>
-        <h4> 1.เพิ่มปุ่มลบจากน้องที่สุ่มมา</h4>
-        <h4> 2.เพิ่มระบบเซ็นทั้งหมด จากน้องที่ขอมา</h4>
-        <h4> 3.ปุ่มหัวใจ และปุ่มเซ็น ไม่เด้งกลับหน้าแรก</h4>
-        <h4> 4.TOP RANK โชว์ ถึง 4 คน เพราะปีสูงบอกน้องบูมครองคนเดียว</h4>
+        <h4> TOP 4 จะติดหน้าเว็บตลอดไปนะ  </h4>
+        <h4> ขอบคุณสำหรับความทรงจำตลอด 2 สัปดาห์</h4>
       </div>
     </div>
   </div>
@@ -69,7 +67,7 @@
         <div class="col-lg-2">
           <a href="#"></a>
         </div>
-        <p>power by django cpe23 cpe67 </p>
+        <p>power by django cpe23 cpe67 cpe31 </p>
       </div>
     </div>
   </div>
