--- a/blogs/static/css/layoutstyle.css
+++ b/blogs/static/css/layoutstyle.css
@@ -182,6 +182,11 @@ a:hover {
   vertical-align: top;
   opacity: 0.85;
 }
+
+img {
+  pointer-events: none;
+}
+
 .snip1336 figcaption {
   width: 100%;
   background-color: #141414;
@@ -198,7 +203,9 @@ a:hover {
   border-style: solid;
   border-width: 55px 0 0 400px;
   border-color: transparent transparent transparent #141414;
+  transition: all 0.5;
 }
+
 .snip1336 figcaption a {
   padding: 5px;
   border: 1px solid #ffffff;
