--- a/templates/layoutnew.html
+++ b/templates/layoutnew.html
@@ -94,16 +94,18 @@
       <ul>
         {%if user.userprofile.edu == "1"%}
         <a class="nav-link" href="appsend"><i class="fas fa-book"></i> สถานะลายเซ็น <span class="sr-only">(current)</span></a>
+
         {%endif%}
-        <a class="nav-link" href='confirmlic'> <i class="fas fa-sign-out-alt"></i> คำขอลายเซ็นที่ได้รับ</a>
+        <!-- <a class="nav-link" href='confirmlic'> <i class="fas fa-sign-out-alt"></i> คำขอลายเซ็นที่ได้รับ</a> -->
         {%if user.userprofile.edu == "1"%}
         <a class="nav-link" href="checklicense"> <i class="fas fa-address-card"></i> ตรวจสอบลายเซ็น</i></a>
         {%endif%}
         {%if user.userprofile.edu == "1"%}
-        <a class="nav-link" href="license"> <i class="fas fa-book-reader"></i> ส่งคำขอลายเซ็น </a>
+        <!-- <a class="nav-link" href="license"> <i class="fas fa-book-reader"></i> ส่งคำขอลายเซ็น </a> -->
         {%endif%}
 
-        <a class="nav-link" href='setting'> <i class="fas fa-cogs"></i> ตั้งค่า</a>
+        <!-- <a class="nav-link" href='setting'> <i class="fas fa-cogs"></i> ตั้งค่า</a> -->
+        
         <a class="nav-link" href='{% url 'signout' %}'> <i class="fas fa-sign-out-alt"> </i> ออกจากระบบ</a>
 
       </ul>
